test/deny-all-default-policies-roma/default-deny-all-egress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Egress
