test/deny-all-default-policies-roma/default-deny-all-ingress-Fluidos.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: fluidos
spec:
  podSelector: {}
  policyTypes:
  - Ingress
